Improve: The markup has been cleaned up further, and the spacing has been fixed

--- a/assets/css/public-main.css
+++ b/assets/css/public-main.css
@@ -14536,6 +14536,9 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
     width: 100%;
   }
 }
+.directorist-categories .directorist-type-nav {
+  margin-bottom: 15px;
+}
 
 /* Taxonomy List Style One */
 .directorist-taxonomy-list-one .directorist-taxonomy-list {
@@ -15039,6 +15042,9 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
   .directorist-location .directorist-col-4 {
     width: 100%;
   }
+}
+.directorist-location .directorist-type-nav {
+  margin-bottom: 15px;
 }
 
 /* Modal Core Styles */
